[gd_scene load_steps=8 format=3 uid="uid://hsq6khdl8tvn"]

[ext_resource type="Script" path="res://scripts/start_screen.gd" id="1_d1ka8"]
[ext_resource type="Shader" path="res://scripts/menu_bg_loop.gdshader" id="1_e67q5"]
[ext_resource type="Texture2D" uid="uid://f3takbhcrbvg" path="res://assets/bg/Background.png" id="2_jy42n"]
[ext_resource type="FontFile" uid="uid://b8kuffsijwh4d" path="res://assets/etc/MathildaDEMO.otf" id="3_i4bos"]
[ext_resource type="PackedScene" uid="uid://byhuogrdaaohx" path="res://scenes/fade_animation.tscn" id="5_twrcw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p416o"]
shader = ExtResource("1_e67q5")
shader_parameter/speed = 50.0
shader_parameter/time_offset = 0.0

[sub_resource type="LabelSettings" id="LabelSettings_uv0ut"]
font = ExtResource("3_i4bos")
font_size = 124

[node name="StartScreen" type="Node2D"]
script = ExtResource("1_d1ka8")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Control"]
material = SubResource("ShaderMaterial_p416o")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -201.0
offset_top = -204.0
offset_right = 1262.0
offset_bottom = 589.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jy42n")
stretch_mode = 1

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 245.0
offset_top = 65.0
offset_right = 805.0
offset_bottom = 241.0
text = "Whimsy"
label_settings = SubResource("LabelSettings_uv0ut")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 410.0
offset_top = 245.0
offset_right = 646.0
offset_bottom = 327.0
theme_override_font_sizes/font_size = 24
text = "PLAY"

[node name="Button2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 410.0
offset_top = 346.0
offset_right = 645.0
offset_bottom = 431.0
theme_override_font_sizes/font_size = 24
text = "QUIT"

[node name="ColorRect" parent="." instance=ExtResource("5_twrcw")]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -898.0
offset_top = -467.0
offset_right = 1854.0
offset_bottom = 1000.0
grow_horizontal = 2
grow_vertical = 2

[node name="Fade_Timer" type="Timer" parent="ColorRect"]

[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/Button2" to="." method="_on_button_2_pressed"]
[connection signal="timeout" from="ColorRect/Fade_Timer" to="." method="_on_fade_timer_timeout"]
